--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>iwwana be the test</title>
+    <title>iwwana be the test!</title>
     <style>
       * {
         padding: 0;
