--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <canvas id="maincanvas" width="960" height="800"></canvas>
     <script src="./JS/index.js"></script>
     <p>FPS数:<span id = "fps"></span></p>
+    <p>デバック:<span id = "test"></span></p>
   </body>
 </html>
