--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <script src="./JS/index.js"></script>
     <p>FPS数:<span id = "fps"></span></p>
     <p>デバック:<span id = "test"></span></p>
+    <p>操作方法<span><br>矢印orAD : 左右移動<br>矢印orSPACE : ジャンプ<br>R : セーブ位置から再スタート<br>Z : 銃撃 (セーブブロックに触れるor撃つことでセーブ)</span></p>
   </body>
 </html>
