--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <canvas id="maincanvas" width="960" height="800"></canvas>
-    <script src="./JS/index.js"></script>
+    <script src="./JS/index.js" type="module"></script>
     <p>FPS数:<span id = "fps"></span></p>
     <p>デバック:<span id = "test"></span></p>
     <p>操作方法<span><br>矢印orAD : 左右移動<br>矢印orSPACE : ジャンプ<br>R : セーブ位置から再スタート<br>Z : 銃撃 (セーブブロックに触れるor撃つことでセーブ)</span></p>
